# httpStunServer

./: .gitignore  client_test.dart  meson.build  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
clientsTests/c/: client_test.c  meson.build  teste.txt  uuid.txt
clientsTests/c/src/: main.c
clientsTests/c/src/include/: Chownat.h  FileChangeInterrupted.h  StunHeaders.h  TcpConnection.h  Utils.h  WebSocketManager.h  list.h
clientsTests/c/src/model/: Chownat.c  FileChangeInterrupted.c  TcpConnection.c  Utils.c  WebSocketManager.c  list.c
clientsTests/dart/: client_test.dart
src/: StunServer.cpp  main.cpp
src/files/: google-services.json
src/include/: FirebaseApi.hpp  FirebaseManager.hpp  StunHeaders.hpp  StunServer.hpp  Utils.hpp  WebSocketManager.hpp
src/model/: FirebaseApi.cpp  FirebaseManager.cpp  Utils.cpp  WebSocketManager.cpp
